# pynspd

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  ci.yml  publish.yml  schema_update.yml
advanced/caching/: index.html
advanced/cli/: index.html
advanced/client/: index.html
advanced/sync_vs_async/: index.html
advanced/typing/: index.html
api/async_client/: index.html
api/client/: index.html
api/errors/: index.html
api/feature/: index.html
api/options/: index.html
api/properties/: index.html
api/types/: index.html
contributing/: index.html
docs/: README.md  contributing.md  userguide.md
docs/advanced/: caching.md  cli.md  client.md  sync_vs_async.md  typing.md
docs/api/: async_client.md  client.md  errors.md  feature.md  options.md  properties.md  types.md
scripts/: autogeneration.py  unasync.py
search/: search_index.json
src/pynspd/: __init__.py  api.py  asyncio_mock.py  cli.py  client.py  errors.py  logger.py  utils.py
src/pynspd/_async/: api.py
src/pynspd/_sync/: api.py
src/pynspd/map_types/: _autogen_layers.py  enums.py
src/pynspd/schemas/: __init__.py  _autogen_features.py  _common.py  base_feature.py  feature.py  geometries.py  layer_configs.py  properties.py  responses.py
src/pynspd/types/: _autogen_layers.py  enums.py
tests/: conftest.py  test_base_client.py  test_cli.py  test_env.py  test_schemas.py
tests/_async/: test_api.py  test_cache.py  test_http_handler.py  test_proxy.py  test_tabs.py
tests/_sync/: test_api.py  test_cache.py  test_http_handler.py  test_proxy.py  test_tabs.py
tests/data/: cn_list.txt  lines.gpkg  poly.gpkg  pt_list.txt  pts.geojson
userguide/: index.html
