[project]
name = "pynspd"
version = "0.1.0"
description = "Python-библиотека для работы с https://nspd.gov.ru (ex-ПКК)"
readme = "README.md"
authors = [
    { name = "yazmolod", email = "yazmolod@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "geojson-pydantic>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "pyproj>=3.7.0",
    "shapely>=2.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "pre-commit>=4.0.1",
    "tqdm>=4.67.1",
]
tests = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "coverage>=7.6.10",
]
lint = [
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[tool.mypy]
enable_incomplete_feature = "NewGenericSyntax"
